--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Typescript: Bridges</title>    
     </head>
     <body>
         <h1>Big Heading</h1>
-        <h3 id="cores">Core count: 0</h3>
+        <!-- <h3 id="cores">Core count: 0</h3> -->
 
+        <script src="dist/add_text.js" defer></script>
         <script src="dist/renderer/main.js" defer></script>
     </body>
 </html>
